--- a/about-us/index.html
+++ b/about-us/index.html
@@ -291,6 +291,12 @@
                 border: 2px solid #000;
                 font-family: Montserrat;
             }
+            .name:before {
+                content: '';
+                width: 1%;
+                min-width: 1px;
+                display: inline-block;
+            }
             .desc{
                 position:absolute;
                 padding: .5vw;
