--- a/about-us/index.html
+++ b/about-us/index.html
@@ -273,7 +273,7 @@
                 position:relative;
                 float:right;
                 padding: .5vw;
-                margin-top:1.34vw;
+                margin-top:1.4vw;
                 font-size:1.9vw;
                 display:inline-block;
                 border: 1px solid #000;
@@ -282,7 +282,7 @@
             .name {
                 position:relative;
                 float:right;
-                margin-right:8vw;
+                margin-right:2vw;
                 padding: .6vw;
                 margin-top:1vw;
                 font-size:2.3vw;
@@ -292,6 +292,7 @@
                 font-family: Montserrat;
             }
             .desc{
+                text-align:right;
                 position:absolute;
                 padding: .5vw;
                 margin-left: 2.1vw;
@@ -301,7 +302,7 @@
                 font-family: Montserrat;
             }
             .gallery img {
-                width: 28%;
+                width: 31%;
                 height: auto;
                 border: 5px solid #000;
                 opacity:1;
