--- a/about-us/index.html
+++ b/about-us/index.html
@@ -90,6 +90,7 @@
                 left: -8px;
                 overflow-x: hidden;
                 padding: 0;
+                margin-bottom:24vw;
             }    
             .logoBox{
                 width: 7.2vw;
@@ -263,7 +264,6 @@
             }
             .gallery {
                 position:relative;
-                margin-bottom:60px;
                 margin-left:7vw;
                 width: 86vw;
                 padding-top:3vw;
@@ -302,7 +302,7 @@
                 font-family: Montserrat;
             }
             .gallery img {
-                width: 31%;
+                width: 29.5%;
                 height: auto;
                 border: 5px solid #000;
                 opacity:1;
