--- a/about-us/index.html
+++ b/about-us/index.html
@@ -449,8 +449,7 @@
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Secretary: Aiden Chen</p>
-                <p class="desc">“It is of the utmost gravity and importance that we ought to ensure the indelible persistence of bird populations.”<br><br>
-                    Fun Fact: Aiden writes like an old man.
+                <p class="desc">Fun Fact: Aiden writes like an old man.
                 </p>
             </div>
             <div class="gallery">
