--- a/about-us/index.html
+++ b/about-us/index.html
@@ -449,8 +449,7 @@
                 </a>
                 <p class="grade">Grade: 11</p>
                 <p class="name">Secretary: Aiden Chen</p>
-                <p class="desc">Fun Fact: Aiden writes like an old man.
-                </p>
+                <p class="desc">Fun Fact: Aiden writes like an old man.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
             </div>
             <div class="gallery">
                 <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
