--- a/about-us/index.html
+++ b/about-us/index.html
@@ -450,7 +450,8 @@
                 <p class="grade">Grade: 11</p>
                 <p class="name">Secretary: Aiden Chen</p>
                 <p class="desc">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Aiden writes like an old man.</p>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Aiden writes like an old man.</p>
             </div>
             <div class="gallery">
                 <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
@@ -460,7 +461,7 @@
                 <p class="name">Webmaster: Richard Li</p>
                 <p class="desc">“What I like most about our club is how we emphasize genuine action. In a time where many of us may feel unheard, it should be even more important to strive for change,
                     whether it be in direct opposition to this conceptual blanket of silence or as part of a larger movement for good.”<br><br>
-                    Fun Fact: Richard has eaten more strawberries than the entire population of Canada.
+                    Fun Fact: Richard has consumed more strawberries than all of Canada.
                 </p>
             </div>
             <div class="gallery">
@@ -470,7 +471,7 @@
                 <p class="grade">Grade: 10</p>
                 <p class="name">Treasurer: Willis Chung</p>
                 <p class="desc">“I wanted to do something for the environment.”<br><br>
-                    Fun Fact: Willis is fluent in 4 languages: French, Chinese, Taiwanese, and English.
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Willis is fluent in four languages: French, Chinese, Taiwanese, and English.
                 </p>
             </div>
         </div>
