--- a/about-us/index.html
+++ b/about-us/index.html
@@ -451,7 +451,7 @@
                 <p class="name">Secretary: Aiden Chen</p>
                 <p class="desc">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Aiden writes like an old man.</p>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Aiden writes like an old man.</p>
             </div>
             <div class="gallery">
                 <a target="_blank" href="/SHSEnvironmentalAction/images/CustomLeaf.png">
@@ -471,7 +471,7 @@
                 <p class="grade">Grade: 10</p>
                 <p class="name">Treasurer: Willis Chung</p>
                 <p class="desc">“I wanted to do something for the environment.”<br><br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Willis is fluent in four languages: French, Chinese, Taiwanese, and English.
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Willis is fluent in four languages: French, Chinese, Taiwanese, and English.
                 </p>
             </div>
         </div>
