--- a/about-us/index.html
+++ b/about-us/index.html
@@ -388,7 +388,7 @@
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <link rel="icon" type="image/png" href="SHSEnvironmentalAction/roundbg.png?v=2" />
+        <link rel="icon" type="image/png" href="https://li21rich.github.io/SHSEnvironmentalAction/roundbg.png?v=2" />
     </head>
     <body style="background-color:White;">
         <img id = "TopBanner" src="/SHSEnvironmentalAction/images/TopBanner2.svg">
@@ -471,7 +471,7 @@
                 <p class="grade">Grade: 10</p>
                 <p class="name">Treasurer: Willis Chung</p>
                 <p class="desc">“I wanted to do something for the environment.”<br><br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Willis is fluent in four languages: French, Chinese, Taiwanese, and English.
+                    &nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Willis is fluent in four languages: French, Chinese, Taiwanese, and English.
                 </p>
             </div>
         </div>
