--- a/about-us/index.html
+++ b/about-us/index.html
@@ -471,7 +471,7 @@
                 <p class="grade">Grade: 10</p>
                 <p class="name">Treasurer: Willis Chung</p>
                 <p class="desc">“I wanted to do something for the environment.”<br><br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;Fun Fact: Willis is fluent in four languages: French, Chinese, Taiwanese, and English.
+                    &nbsp;&nbsp;&nbsp;Fun Fact: Willis is fluent in four languages: French, Chinese, Taiwanese, and English.
                 </p>
             </div>
         </div>
