--- a/404.html
+++ b/404.html
@@ -5,14 +5,14 @@
 h1 {    
   color: green;    
   font-weight: 900;   
-  font-size: 20px;    
+  font-size: 3.5vw;    
   font-family: Arial, sans-serif;   
  }
 </style>
 </head>
   
 <body>
-<a href="#"><img src="/SHSEnvironmentalAction/images/wiped2.svg"></a>
-<h1>Whoops! This webpage doesn't exist, sorry. Return to home: https://li21rich.github.io/SHSEnvironmentalAction/</h1>
+<img src="/SHSEnvironmentalAction/roundbg.png">
+<h1>Whoops! This webpage doesn't exist. Return to home: https://li21rich.github.io/SHSEnvironmentalAction/</h1>
 </body>
 </html>
