--- a/about-us/index.html
+++ b/about-us/index.html
@@ -17,8 +17,8 @@
                 overflow-x: hidden !important;
                 background-image: url("/SHSEnvironmentalAction/images/AboutUsBackground.svg");
                 background-position: center top;
-                height: 222.280334728vw;
-                min-height: 2600px;
+                height: 247vw;
+                min-height: 2639px;
                 background-size: cover;
                 background-attachment: scroll;
                 background-repeat: no-repeat; 
@@ -307,8 +307,8 @@
                 border: 5px solid #000;
                 opacity:1;
             }
-            .gallery:hover {
-                opacity:0.8;
+            .gallery img:hover {
+                opacity:0.78;
             }
             * {
                 box-sizing: border-box;
