--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
   <body>
     <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell.svg">
     <h1>Whoops! 404 Error.<h1>
-    <p>The page you're migrating to doesn't exist at <span id="domain"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/>Return to home page.</a></p>
+    <p>The page you're migrating to doesn't exist at <span id="domain"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br>Return to home page.</a></p>
       
     <script>
         document.getElementById("domain").domain = window.location.hostname;
