--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
   <head>
     <style>
       #bird{
+        position:relative
         width: 20vw;
         left: 50%;
         transform: translateX(-50%);
@@ -12,19 +13,18 @@
         margin:0;
       }
       h1, p {    
+        position:relative;
         color: green;     
-        font-size: clamp(37px, 4vw, 9.5vw);  
+        font-size: clamp(37px, 3.8vw, 9.5vw);  
         font-family: Arial, sans-serif;   
         overflow-x: hidden;
         word-wrap: break-word;
         white-space: -moz-pre-wrap;
         white-space: pre-wrap;
         font-weight: 900;   
-        left: 50%;
-        transform: translateX(-50%);
       }
       p {
-        font-size: clamp(25px, 3.55vw, 9vw);  
+        font-size: clamp(25px, 3.35vw, 9vw);  
         padding:2px;
         margin:0;
       }
@@ -39,7 +39,7 @@
     <p>The page you're migrating to doesn't exist at <span id="domain"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br>Return to home page.</a></p>
       
     <script>
-        document.getElementById("domain").domain = window.location.hostname;
+        document.getElementById("domain").innerHTML = window.location.hostname;
     </script>
   </body>
 </html>
