--- a/404.html
+++ b/404.html
@@ -2,9 +2,51 @@
 <html>
   <head>
     <style>
+      #TopBanner{
+          width: 108%;
+          min-width: 1250px;
+          object-fit: cover;
+          height: auto;
+          position: relative;
+          z-index: 1;
+          top: -8px;
+          left: -8px;
+          overflow-x: hidden;
+          padding: 0;
+      }    
+      .logoBox{
+          width: 7.2vw;
+          min-width: 85px;
+          height: auto;
+          position:absolute;
+          z-index: 2;
+          top: clamp(21px, 1.9vw, 800px);
+          left: 1.9vw;
+      }
+      .logoBox img{
+          display:block;
+          margin 0 auto;
+          max-width: 100%;
+          max-height: 100%;
+      }
+      .logoTextBox{
+          width: 16vw;
+          min-width: 178px;
+          height: auto;
+          position:absolute;
+          z-index: 2;
+          top: clamp(26px, 2.85vw, 800px);
+          left: clamp(127px, 10.6vw, 800px);
+      }
+      .logoTextBox img{
+          display:block;
+          margin 0 auto;
+          max-width: 100%;
+          max-height: 100%;
+      }
       #bird{
         position:relative
-        width: 20vw;
+        width: 30vw;
         left: 50%;
         transform: translateX(-50%);
       }
@@ -34,6 +76,15 @@
     </style>
   </head>
   <body>
+    <img id = "TopBanner" src="images/TopBanner2.svg">
+    <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
+        <div class="logoBox">
+            <img src="images/birdgreen23.svg" alt="Environmental Action Club Logo">
+        </div>
+        <div class="logoTextBox">
+            <img src="images/BrandText3.svg" alt="Environmental Action Club Logo">
+        </div>
+    </a>
     <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell.svg">
     <h1>Whoops! 404 Error.<h1>
     <p>The page you're migrating to doesn't exist at <span id="domain"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br>Return to home page.</a></p>
