--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
           max-height: 100%;
       }
       #bird{
-        position:relative
+        position:relative;
         width: 30vw;
         left: 50%;
         transform: translateX(-50%);
