--- a/404.html
+++ b/404.html
@@ -86,7 +86,7 @@
         </div>
     </a>
     <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell2.svg">
-    <h1>Whoops! 404 Error.<h1>
+    <h1>Whoops! 404 Error.</h1>h1>
     <p>The page you're migrating to doesn't exist at <span id="domain"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br>Return to home page.</a></p>
       
     <script>
