--- a/404.html
+++ b/404.html
@@ -3,14 +3,14 @@
   <head>
     <style>
       #TopBanner{
-          width: 108%;
+          width: 109.8%;
           min-width: 1250px;
           object-fit: cover;
           height: auto;
           position: relative;
           z-index: 1;
           top: -8px;
-          left: -8px;
+          left: -11px;
           overflow-x: hidden;
           padding: 0;
       }    
@@ -46,18 +46,17 @@
       }
       #bird{
         position:relative;
-        width: 30vw;
-        left: 50%;
-        transform: translateX(-50%);
+        width: 40vw;
+        left: 33%;
       }
       h1{
+        font-size: clamp(37px, 3.8vw, 9.5vw);  
         padding:2px;
         margin:0;
       }
       h1, p {    
         position:relative;
         color: green;     
-        font-size: clamp(37px, 3.8vw, 9.5vw);  
         font-family: Arial, sans-serif;   
         overflow-x: hidden;
         word-wrap: break-word;
@@ -86,7 +85,7 @@
         </div>
     </a>
     <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell2.svg">
-    <h1>Whoops! 404 Error.</h1>h1>
+    <h1>Whoops! 404 Error.</h1>
     <p>The page you're migrating to doesn't exist at <span id="domain"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br>Return to home page.</a></p>
       
     <script>
