--- a/404.html
+++ b/404.html
@@ -47,10 +47,10 @@
       #bird{
         position:relative;
         width: 40vw;
-        left: 33%;
+        float:left;
       }
       h1{
-        font-size: clamp(31px, 3.7vw, 9.5vw);  
+        font-size: clamp(31px, 3.5vw, 9.5vw);  
         padding:2px;
         margin:0;
       }
@@ -62,13 +62,14 @@
         word-wrap: break-word;
         white-space: -moz-pre-wrap;
         white-space: pre-wrap;
-        font-weight: 900;   
-        left: 14%;
+        left: 9%;
+        width:38vw;
+        display:inline-block;
         margin-top:.9vw;
+        float:left;
       }
       p {
-        font-size: clamp(25px, 3vw, 9vw);  
-        font-weight: 400;
+        font-size: clamp(23px, 2.8vw, 9vw);  
         padding:2px;
         margin:0;
       }
@@ -87,8 +88,8 @@
             <img src="images/BrandText3.svg" alt="Environmental Action Club Logo">
         </div>
     </a>
-    <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell2.svg">
-    <h1>Whoops! 404 Error.</h1>
+    <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell3.svg">
+    <h1><span style="font-weight: bold">Whoops!</span> 404 Error.</h1>
     <p>The page you're migrating to doesn't exist at <span id="domain"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br>Return to home page.</a></p>
       
     <script>
