--- a/about-us/index.html
+++ b/about-us/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1">
-        <title>Environmental Action</title>
+        <title>About Us</title>
         <meta charset="utf-8">
         <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel="stylesheet">
