--- a/404.html
+++ b/404.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>About Us</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1">
+    <meta charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel="stylesheet">
     <style>
       #TopBanner{
           width: 109.8%;
@@ -53,6 +58,7 @@
         font-size: clamp(31px, 3.5vw, 9.5vw);  
         padding:2px;
         margin:0;
+        font-family: Montserrat;
       }
       h1, p {    
         position:relative;
@@ -74,11 +80,13 @@
         font-size: clamp(23px, 2.7vw, 9vw);  
         padding:2px;
         margin:0;
+        font-family: Roboto;
       }
       p a{
         font-weight: 900;   
       }
     </style>
+    <link rel="icon" type="image/png" href="roundbg.png?v=2" />
   </head>
   <body>
     <img id = "TopBanner" src="images/TopBanner2.svg">
