--- a/404.html
+++ b/404.html
@@ -53,13 +53,27 @@
         position:relative;
         width: 39vw;
         float:left;
+        margin-left:7vw;
+        margin-top:3vw;
+      }
+      h1, p {    
+        color: green;      
+        overflow-x: hidden;
+        word-wrap: break-word;
+        white-space: -moz-pre-wrap;
+        white-space: pre-wrap;
+        left: 9%;
+        width:38vw;
+        margin-right:1vw;
+        float:left;
       }
       h1{
         position:absolute;
         font-size: clamp(31px, 3.5vw, 9.5vw);  
         padding:2px;
         margin:0;
-        font-family: Montserrat;
+        font-family: Roboto;
+        margin-top:3vw;
       }
       p {
         position:relative;
@@ -68,24 +82,11 @@
         padding:2px;
         margin:0;
         margin-left:2vw;
-        margin-top:4.5vw;
-        font-family: Roboto;
-      }
-      h1, p {    
-        color: green;     
-        font-family: Arial, sans-serif;   
-        overflow-x: hidden;
-        word-wrap: break-word;
-        white-space: -moz-pre-wrap;
-        white-space: pre-wrap;
-        left: 9%;
-        width:38vw;
-        margin-top:.9vw;
-        margin-right:1vw;
-        float:left;
+        margin-top:10.5vw;
+        font-family: Montserrat;
       }
       p a{
-        font-weight: 900;   
+        font-weight: 700;   
       }
     </style>
     <link rel="icon" type="image/png" href="roundbg.png?v=2" />
