--- a/404.html
+++ b/404.html
@@ -7,6 +7,9 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel="stylesheet">
     <style>
+      html, body{
+        overflow-x: hide;
+      }
       #TopBanner{
           width: 109.8%;
           min-width: 1250px;
@@ -54,7 +57,7 @@
         width: 39vw;
         float:left;
         margin-left:13vw;
-        margin-top:13vw;
+        margin-top:9vw;
       }
       h1, p {    
         color: green;      
@@ -73,7 +76,7 @@
         padding:2px;
         margin:0;
         font-family: Roboto;
-        margin-top:14vw;
+        margin-top:6vw;
       }
       p {
         position:relative;
@@ -86,6 +89,9 @@
       }
       p a{
         font-weight: 700;   
+      }
+      @media screen and (min-width: 921px) {
+
       }
     </style>
     <link rel="icon" type="image/png" href="roundbg.png?v=2" />
