--- a/404.html
+++ b/404.html
@@ -8,19 +8,21 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel="stylesheet">
     <style>
       html, body{
-        overflow-x: hide;
+        margin:0;
+        overflow-x: hidden;
       }
       #TopBanner{
-          width: 109.8%;
+          width: 108%;
+          margin:0;
+          padding:0;
           min-width: 1250px;
           object-fit: cover;
           height: auto;
           position: relative;
           z-index: 1;
-          top: -8px;
-          left: -11px;
+          top: -6px;
+          left: -1px;
           overflow-x: hidden;
-          padding: 0;
       }    
       .logoBox{
           width: 7.2vw;
@@ -57,7 +59,7 @@
         width: 39vw;
         float:left;
         margin-left:13vw;
-        margin-top:9vw;
+        margin-top:5vw;
       }
       h1, p {    
         color: green;      
@@ -76,7 +78,7 @@
         padding:2px;
         margin:0;
         font-family: Roboto;
-        margin-top:6vw;
+        margin-top:4vw;
       }
       p {
         position:relative;
@@ -84,7 +86,7 @@
         font-size: clamp(23px, 2.7vw, 9vw);  
         padding:2px;
         margin:0;
-        margin-top:17.5vw;
+        margin-top:10.5vw;
         font-family: Montserrat;
       }
       p a{
