--- a/404.html
+++ b/404.html
@@ -67,9 +67,9 @@
         word-wrap: break-word;
         white-space: -moz-pre-wrap;
         white-space: pre-wrap;
-        left: 10%;
+        left: 8.7%;
         width:38vw;
-        margin-right:1vw;
+        margin-right:0.5vw;
         float:left;
       }
       h1{
@@ -83,7 +83,7 @@
       p {
         position:relative;
         display:inline-block;
-        font-size: clamp(23px, 2.7vw, 9vw);  
+        font-size: clamp(23px, 2.5vw, 9vw);  
         padding:2px;
         margin:0;
         margin-top:10.5vw;
@@ -109,7 +109,7 @@
         </div>
     </a>
     <h1><span style="font-weight: bold">Whoops!</span> 404 Error.</h1>
-    <p>The page you're migrating to doesn't exist at <span id="domain"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br>Return to home page.</a></p>
+    <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(17px, 2.3vw, 8.7vw);"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br>Return to home page.</a></p>
     <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell3.svg">
     <script>
         document.getElementById("domain").innerHTML = window.location.href;
