--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
         width: 39vw;
         float:left;
         margin-left:13vw;
-        margin-top:5vw;
+        margin-top:4.2vw;
       }
       h1, p {    
         color: green;      
@@ -109,7 +109,7 @@
         </div>
     </a>
     <h1><span style="font-weight: bold">Whoops!</span> 404 Error.</h1>
-    <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(17px, 2.3vw, 8.7vw);"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br>Return to home page.</a></p>
+    <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(15px, 2vw, 8.7vw);"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br><br>Return to home page.</a></p>
     <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell3.svg">
     <script>
         document.getElementById("domain").innerHTML = window.location.href;
