--- a/404.html
+++ b/404.html
@@ -112,7 +112,7 @@
     <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(15px, 2vw, 8.7vw);"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br><br>Return to home page.</a></p>
     <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell3.svg">
     <script>
-        document.getElementById("domain").innerHTML = window.location.href;
+        document.getElementById("domain").innerHTML = window.location.href.replace(/^(?:https?:\/\/)?(?:www\.)?/i, "").split('.')[0];
     </script>
   </body>
 </html>
