--- a/404.html
+++ b/404.html
@@ -86,7 +86,7 @@
         font-size: clamp(23px, 2.5vw, 9vw);  
         padding:2px;
         margin:0;
-        margin-top:10.5vw;
+        margin-top:10.34vw;
         font-family: Montserrat;
       }
       p a{
@@ -109,7 +109,7 @@
         </div>
     </a>
     <h1><span style="font-weight: bold">Whoops!</span> 404 Error.</h1>
-    <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(15px, 2vw, 8.7vw);"></span>. <a href = https://li21rich.github.io/SHSEnvironmentalAction/><br><br>Return to home page.</a></p>
+    <p>The page you're migrating to doesn't exist at <span id="domain" style = "font-size: clamp(15px, 2vw, 8.7vw);"></span> <a href = "https://li21rich.github.io/SHSEnvironmentalAction/" style = "line-height:0.8;"><br><br>Return to home page.</a></p>
     <img id = "bird" src="/SHSEnvironmentalAction/images/BirdFell3.svg">
     <script>
         document.getElementById("domain").innerHTML = window.location.href.replace(/(^\w+:|^)\/\//, '');
