--- a/404.html
+++ b/404.html
@@ -92,8 +92,12 @@
       p a{
         font-weight: 700;   
       }
-      @media screen and (min-width: 921px) {
-
+      @media screen and (min-width: 690px) {
+        #bird{
+          display:block;
+          clear:left;
+          width:90vw;
+        }
       }
     </style>
     <link rel="icon" type="image/png" href="roundbg.png?v=2" />
