--- a/404.html
+++ b/404.html
@@ -92,7 +92,7 @@
       p a{
         font-weight: 700;   
       }
-      @media screen and (min-width: 690px) {
+      @media screen and (max-width: 690px) {
         #bird{
           display:block;
           clear:left;
