--- a/404.html
+++ b/404.html
@@ -99,18 +99,26 @@
         left: 52vw;
         top:41.5vw;
       }
-      @media screen and (max-width: 690px) {
+      @media screen and (max-width: 1120px) {
         #joke{
           top:45.5vw;
         }
       }
       @media screen and (max-width: 690px) {
+        h1{
+          position:relative;
+          float:left;
+          margin:0;
+          margin-bottom:1px;
+        }
         #bird{
+          margin:0;
           display:block;
           clear:left;
           width:90vw;
         }
         #joke{
+          margin:0;
           clear:left;
           position:relative; 
           display:block;
