--- a/404.html
+++ b/404.html
@@ -111,6 +111,9 @@
           margin:0;
           margin-bottom:1px;
         }
+        h1, p {    
+          width:100vw;
+        }
         #bird{
           margin:0;
           display:block;
@@ -122,6 +125,8 @@
           clear:left;
           position:relative; 
           display:block;
+          text-align:center;
+          width:100vw;
         }
       }
     </style>
