--- a/404.html
+++ b/404.html
@@ -55,6 +55,12 @@
           max-width: 100%;
           max-height: 100%;
       }
+      #joke{
+        position: absolute;
+        font-size: clamp(19px, 1.5vw, 8.7vw);  
+        left: 52vw;
+        top:41.5vw;
+      }
       #bird{
         position:relative;
         width: 39vw;
@@ -93,12 +99,6 @@
       p a{
         font-weight: 700;   
       }
-      #joke{
-        position: absolute;
-        font-size: clamp(19px, 1.5vw, 8.7vw);  
-        left: 52vw;
-        top:41.5vw;
-      }
       @media screen and (max-width: 1120px) {
         #joke{
           top:45.5vw;
@@ -114,19 +114,23 @@
         h1, p {    
           width:100vw;
         }
+        #joke{
+          position:relative; 
+          margin:0;
+          margin-top:0.4vw;
+          clear:left;
+          display:block;
+          text-align:center;
+          left:0;
+          top:0;
+          width:100vw;
+        }
         #bird{
+          position:relative;
           margin:0;
           display:block;
           clear:left;
           width:90vw;
-        }
-        #joke{
-          margin:0;
-          clear:left;
-          position:relative; 
-          display:block;
-          text-align:center;
-          width:100vw;
         }
       }
     </style>
