--- a/404.html
+++ b/404.html
@@ -104,6 +104,11 @@
           top:45.5vw;
         }
       }
+      @media screen and (max-width: 910px) {
+        #joke{
+          top:49.2vw;
+        }
+      }
       @media screen and (max-width: 690px) {
         h1{
           position:relative;
