--- a/404.html
+++ b/404.html
@@ -116,7 +116,7 @@
         }
         h1, p {    
           width:100vw;
-          margin:0;
+          margin:4px;
         }
         #joke{
           position:relative; 
@@ -132,7 +132,7 @@
         #bird{
           width:77vw;
           position:relative;
-          margin: -250px 0px -150px; 
+          margin: -1vw 0px -13vw;
           display:block;
           clear:left;
           width:90vw;
