--- a/404.html
+++ b/404.html
@@ -61,6 +61,7 @@
         float:left;
         margin-left:13vw;
         margin-top:-4vw;
+        z-index:0;
       }
       h1, p {    
         overflow-x: hidden;
@@ -71,6 +72,7 @@
         width:38vw;
         margin-right:0.5vw;
         float:left;
+        z-index:1;
       }
       h1{
         color: forestgreen;      
@@ -96,17 +98,18 @@
       #joke{
         position: absolute;
         font-size: clamp(19px, 1.5vw, 8.7vw);  
-        left: 52vw;
+        left: 56vw;
         top:34.6vw;
       }
-      @media screen and (max-width: 1120px) {
+      @media screen and (max-width: 1140px) {
         #joke{
-          top:35.7vw;
+          top:36.1vw;
         }
       }
-      @media screen and (max-width: 910px) {
+      @media screen and (max-width: 930px) {
         #joke{
-          top:36.4vw;
+          top:37vw;
+          left: 52vw;
         }
       }
       @media screen and (max-width: 730px) {
@@ -117,6 +120,7 @@
         h1, p {    
           width:100vw;
           margin:4px;
+          text-align:center;
         }
         #joke{
           position:relative; 
@@ -130,11 +134,12 @@
           width:100vw;
         }
         #bird{
-          width:77vw;
+          width:70vw !important;
           position:relative;
-          margin: -1vw 0px -13vw;
+          margin: -12vw 0px -13vw;
           display:block;
           clear:left;
+          left:15vw;
           width:90vw;
         }
       }
