--- a/404.html
+++ b/404.html
@@ -118,9 +118,10 @@
           float:left;
         }
         h1, p {    
-          width:100vw;
-          margin:4px;
+          width:95vw;
+          margin-bottom:4px;
           text-align:center;
+          left:0;
         }
         #joke{
           position:relative; 
