--- a/404.html
+++ b/404.html
@@ -96,10 +96,16 @@
         font-weight: 700;   
       }
       #joke{
-        position: absolute;
+        position: relative;
         font-size: clamp(19px, 1.5vw, 8.7vw);  
-        left: 56vw;
-        top:44vw;
+        margin:0;
+        margin-left:48vw;
+        margin-top:-5vw;
+      }
+      @media screen and (max-width: 1100px) {
+        #joke{
+          margin-left:45vw;
+        }  
       }
       @media screen and (max-width: 730px) {
         h1{
