--- a/404.html
+++ b/404.html
@@ -146,13 +146,13 @@
     <link rel="icon" type="image/png" href="roundbg.png?v=2" />
   </head>
   <body>
-    <img id = "TopBanner" src="images/TopBanner3.svg">
+    <img id = "TopBanner" src="SHSEnvironmentalAction/images/TopBanner3.svg">
     <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
         <div class="logoBox">
-            <img src="images/birdgreen23.svg" alt="Environmental Action Club Logo">
+            <img src="SHSEnvironmentalAction/images/birdgreen23.svg" alt="Environmental Action Club Logo">
         </div>
         <div class="logoTextBox">
-            <img src="images/BrandText3.svg" alt="Environmental Action Club Logo">
+            <img src="SHSEnvironmentalAction/images/BrandText3.svg" alt="Environmental Action Club Logo">
         </div>
     </a>
     <h1><span style="font-weight: bold">Whoops!</span> 404 Error.</h1>
