--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About Us</title>
+    <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1">
     <meta charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Montserrat|Montserrat:400,700' rel='stylesheet'>
@@ -143,16 +143,16 @@
         }
       }
     </style>
-    <link rel="icon" type="image/png" href="roundbg.png?v=2" />
+    <link rel="icon" type="image/png" href="https://li21rich.github.io/SHSEnvironmentalAction/roundbg.png?v=2">
   </head>
   <body>
-    <img id = "TopBanner" src="SHSEnvironmentalAction/images/TopBanner3.svg">
+    <img id = "TopBanner" src="/SHSEnvironmentalAction/images/TopBanner3.svg">
     <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
         <div class="logoBox">
-            <img src="SHSEnvironmentalAction/images/birdgreen23.svg" alt="Environmental Action Club Logo">
+            <img src="/SHSEnvironmentalAction/images/birdgreen23.svg" alt="Environmental Action Club Logo">
         </div>
         <div class="logoTextBox">
-            <img src="SHSEnvironmentalAction/images/BrandText3.svg" alt="Environmental Action Club Logo">
+            <img src="/SHSEnvironmentalAction/images/BrandText3.svg" alt="Environmental Action Club Logo">
         </div>
     </a>
     <h1><span style="font-weight: bold">Whoops!</span> 404 Error.</h1>
