--- a/index.html
+++ b/index.html
@@ -735,8 +735,8 @@
         <img id = "TopBanner" src="images/TopBanner3.svg">
         <img id = "halftone" src="images/halftone2.png">
         <div class="LinksMenu">
-            <a href="#articles" style="padding-left: 12%;">Articles</a>
-            <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
+            <a href="https://li21rich.github.io/SHSEnvironmentalAction/articles" style="padding-left: 12%;">Articles</a>
+            <a href="https://li21rich.github.io/SHSEnvironmentalAction/campaigns" style="padding-left: 12%;">Campaign</a>
             <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="#" class="icon">
@@ -751,10 +751,14 @@
             </div>
         </a>
         <img id = "referencePoint" src="images/CustomLeaf.png">
-        <button class="BannerButtons ArticlesButton">Articles
-        </button>
-        <button class="BannerButtons CampaignsButton">Campaigns
-        </button>
+        <form>
+            <button class="BannerButtons ArticlesButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/articles">Articles
+            </button>
+        </form>
+        <form>
+            <button class="BannerButtons CampaignsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/campaigns">Campaigns
+            </button>
+        </form>
         <form>
             <button class="BannerButtons AboutUsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/about-us">About Us
             </button>
