--- a/about-us/index.html
+++ b/about-us/index.html
@@ -392,9 +392,9 @@
     <body style="background-color:White;">
         <img id = "TopBanner" src="/SHSEnvironmentalAction/images/TopBanner3.svg">
         <div class="LinksMenu">
-            <a href="#articles" style="padding-left: 12%;">Articles</a>
-            <a href="#campaigns" style="padding-left: 12%;">Campaign</a>
-            <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us/" style="padding-left: 12%;">About Us</a>
+            <a href="https://li21rich.github.io/SHSEnvironmentalAction/articles" style="padding-left: 12%;">Articles</a>
+            <a href="https://li21rich.github.io/SHSEnvironmentalAction/campaigns" style="padding-left: 12%;">Campaign</a>
+            <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="#" class="icon">
             <i class="fa fa-bars"></i>
@@ -408,12 +408,16 @@
             </div>
         </a>
         <img id = "referencePoint" src="/SHSEnvironmentalAction/images/CustomLeaf.png">
-        <button class="BannerButtons ArticlesButton">Articles
-        </button>
-        <button class="BannerButtons CampaignsButton">Campaigns
-        </button>
         <form>
-            <button class="BannerButtons AboutUsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/about-us/">About Us
+            <button class="BannerButtons ArticlesButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/articles">Articles
+            </button>
+        </form>
+        <form>
+            <button class="BannerButtons CampaignsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/campaigns">Campaigns
+            </button>
+        </form>
+        <form>
+            <button class="BannerButtons AboutUsButton" formaction="https://li21rich.github.io/SHSEnvironmentalAction/about-us">About Us
             </button>
         </form>
         <img class = "CustomLeaf LeafOne"/>
