--- a/index.html
+++ b/index.html
@@ -151,9 +151,15 @@
             }
             .ArticlesButton{
                 right: 28vw;
+
+                /* TEMPORARY */
+                visibility: hidden !important;
             }
             .CampaignsButton{
                 right: 15.5vw;
+
+                /* TEMPORARY */
+                visibility: hidden !important;
             }
             .AboutUsButton{
                 right: 3vw;
@@ -735,8 +741,8 @@
         <img id = "TopBanner" src="images/TopBanner3.svg">
         <img id = "halftone" src="images/halftone2.png">
         <div class="LinksMenu">
-            <a href="https://li21rich.github.io/SHSEnvironmentalAction/articles/" style="padding-left: 12%;">Articles</a>
-            <a href="https://li21rich.github.io/SHSEnvironmentalAction/campaigns/" style="padding-left: 12%;">Campaign</a>
+            <!--<a href="https://li21rich.github.io/SHSEnvironmentalAction/articles/" style="padding-left: 12%;">Articles</a>-->
+            <!--<a href="https://li21rich.github.io/SHSEnvironmentalAction/campaigns/" style="padding-left: 12%;">Campaign</a>-->
             <a href="https://li21rich.github.io/SHSEnvironmentalAction/about-us/" style="padding-left: 12%;">About Us</a>
         </div>
         <a href="#" class="icon">
