--- a/404.html
+++ b/404.html
@@ -35,12 +35,14 @@
           left: 1.9vw;
       }
       .logoBox img{
+          position:relative;
           display:block;
           margin 0 auto;
           max-width: 100%;
           max-height: 100%;
       }
       .logoTextBox{
+          position: relative;
           width: 16vw;
           min-width: 178px;
           height: auto;
