--- a/about-us/index.html
+++ b/about-us/index.html
@@ -103,7 +103,7 @@
             }
             .logoBox img{
                 display:block;
-                margin 0 auto;
+                margin: 0 auto;
                 max-width: 100%;
                 max-height: 100%;
             }
