--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
       .logoBox img{
           position:relative;
           display:block;
-          margin 0 auto;
+          margin: 0 auto;
           max-width: 100%;
           max-height: 100%;
       }
@@ -53,7 +53,7 @@
       }
       .logoTextBox img{
           display:block;
-          margin 0 auto;
+          margin 0: auto;
           max-width: 100%;
           max-height: 100%;
       }
