--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             }
             .logoBox img{
                 display:block;
-                margin 0 auto;
+                margin: 0 auto;
                 max-width: 100%;
                 max-height: 100%;
             }
@@ -117,7 +117,7 @@
             }
             .logoTextBox img{
                 display:block;
-                margin 0 auto;
+                margin: 0 auto;
                 max-width: 100%;
                 max-height: 100%;
             }
