--- a/about-us/index.html
+++ b/about-us/index.html
@@ -118,7 +118,7 @@
             }
             .logoTextBox img{
                 display:block;
-                margin 0 auto;
+                margin: 0 auto;
                 max-width: 100%;
                 max-height: 100%;
             }
